--- a/newDesign/style.css
+++ b/newDesign/style.css
@@ -609,6 +609,12 @@ body::after {
     border-radius: 20px;
 }
 
+.new img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
 
 .bottom-shadow {
     height: 10rem;
